...
    }
    
    // alert controller with a text field and Filter and Cancel buttons. Filter button sends user input to applyUserFilter and the table is reloaded
    @objc func searchTapped() {
        
        // if optional returns nil (no text fields), the nill coalesing operator ?? is activated and returns the string "0" instead.  Therefore userInput will always be a string and not String?, it will be something the user entered or "0"
        let ac = UIAlertController(title: "Filter…", message: nil, preferredStyle: .alert)
        ac.addTextField()

        ac.addAction(UIAlertAction(title: "Filter", style: .default) { [unowned self] _ in
            let userInput = ac.textFields?[0].text ?? "0"
            self.wordData.applyUserFilter(userInput)
            self.tableView.reloadData()
        })

        ac.addAction(UIAlertAction(title: "Cancel", style: .cancel))
...
