...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="PYP-PF-CqE" id="PpD-NO-wjl"/>
                            <outlet property="delegate" destination="PYP-PF-CqE" id="p3h-SM-Bn5"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Word Counter" id="SNS-de-Avz"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="RJb-g4-227" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="602.89855072463774" y="-30.133928571428569"/>
        </scene>
        <!--Word Counter-->
...
